<resources>
    <string name="app_name" translatable="false">Gym App</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="language">language</string>

    <string name="weight">Weight</string>
    <string name="stretching">Stretching</string>
    <string name="nutrition">Nutrition</string>
    <string name="trainingPlans">Training plans</string>
    <string name="diets">Diets</string>
    <string name="calories">Calories calculator</string>
    <string name="new_diet">New Diet</string>
    <string name="my_training">My Training</string>
    <string name="trainings">Trainings</string>
    <string name="calories_final">Calories</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="meal">Meal</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height (cm)</string>
    <string name="age">Age</string>
    <string name="calculate_imc">Calculate Imc</string>
    <string name="imc" translatable="false">Imc</string>

    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="bicep">Bicep</string>
    <string name="tricep">Tricep</string>
    <string name="shoulder">Shoulder</string>
    <string name="abdomen">Abdomen</string>
    <string name="front_leg">Front leg</string>
    <string name="back_leg">Back leg</string>

    <string name="warning_diet_name">The name field cannot be empty</string>
    <string name="warning_body_fields_no_exist">The fields cannot be empty</string>
    <string name="warning_body_fields_no_valid">Fields no valid</string>
    <string name="error_name_exist">The name field exist</string>
    <string name="information_delete">Do you want to eliminate this diet?</string>
    <string name="error_bd">BD Error, check fields</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="information">Information</string>
    <string name="warning">Warning</string>
    <string name="Error">Error</string>

    <string name="strechting_desc1">Estirar los brazos hasta tocar las puntas de los pies</string>
    <string name="save">Save</string>
    <string name="repetitions">Repetitions</string>
    <string name="series">Series</string>

    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="days">Days</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Español</item>
    </string-array>
</resources>
