<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.prueba.aplicaciondeportiva.ui.home.HomeFragment"
        android:label="@string/title_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_nutrition"
            app:destination="@+id/navigation_nutrition" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_stretchting"
            app:destination="@id/navigation_stretchting" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_weight"
            app:destination="@id/navigation_weight" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_training"
            app:destination="@id/navigation_training" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.prueba.aplicaciondeportiva.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.prueba.aplicaciondeportiva.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.prueba.aplicaciondeportiva.ui.nutrition.NutritionFragment"
        android:label="@string/nutrition"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/navigation_stretchting"
        android:name="com.prueba.aplicaciondeportiva.ui.stretchting.StretchtingFragment"
        android:label="@string/stretching"
        tools:layout="@layout/fragment_stretchting" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.prueba.aplicaciondeportiva.ui.training.TrainingFragment"
        android:label="@string/trainingPlans"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_weight"
        android:name="com.prueba.aplicaciondeportiva.ui.weight.WeightFragment"
        android:label="@string/weight"
        tools:layout="@layout/fragment_weight" />

</navigation>