<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_marron"
    android:orientation="vertical"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_chest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/chest_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/chest_male_body_icon_143226" />

                    <TextView
                        android:id="@+id/chest_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/chest"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_abs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/abs_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/waist_male_body_icon_143227" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/abdomen"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_shoulder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/shoulder_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/shoulder_male_body_icon_143220" />

                    <TextView
                        android:id="@+id/shoulder_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/shoulder"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_biceps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/biceps_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/arm_muscle_male_body_icon_143229" />

                    <TextView
                        android:id="@+id/biceps_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/bicep"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_triceps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/triceps_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/arm_muscle_male_body_icon_143229" />

                    <TextView
                        android:id="@+id/triceps_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/tricep"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/back_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/back_male_body_icon_143224" />

                    <TextView
                        android:id="@+id/back_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/back"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_frontLeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/frontLeg_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/leg_muscle_body_icon_143225" />

                    <TextView
                        android:id="@+id/frontLeg_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/front_leg"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_backLeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/colorMarronClaro"
                card_view:cardCornerRadius="8dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/backLeg_imageView"
                        android:layout_width="126dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        card_view:srcCompat="@mipmap/leg_muscle_body_icon_143225" />

                    <TextView
                        android:id="@+id/backLeg_name"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="68dp"
                        android:text="@string/back_leg"

                        android:textAlignment="center"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>